--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "sass --watch scss/styles.scss css/styles.css"
+    "compile:sass": "sass --watch scss/styles.scss css/styles__sass.css"
   },
   "repository": {
     "type": "git",
